--- a/notebooks/synthid_text_huggingface_integration.ipynb
+++ b/notebooks/synthid_text_huggingface_integration.ipynb
@@ -47,6 +47,13 @@
    ]
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "!pip install -q -r ../requirements.txt"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-14T13:51:13.260951Z",
@@ -54,13 +61,15 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# @title Install and import the required Python packages\n",
-    "#\n",
-    "# @markdown Running this cell may require you to restart your session."
-   ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 1,
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "# Ajoutez le chemin de votre répertoire src\n",
+    "sys.path.append(os.path.abspath(\"..\"))"
+   ]
   },
   {
    "metadata": {
@@ -102,20 +111,15 @@
     }
    },
    "source": [
-    "# @title Choose your model.\n",
-    "#\n",
-    "# @markdown This reference implementation is configured to use the Gemma v1.0\n",
-    "# @markdown Instruction-Tuned variants in 2B or 7B sizes, or GPT-2.\n",
-    "\n",
-    "\n",
     "class ModelName(enum.Enum):\n",
     "  GPT2 = 'gpt2'\n",
     "  GEMMA_2B = 'google/gemma-2b-it'\n",
     "  GEMMA_7B = 'google/gemma-7b-it'\n",
     "  OLMO = 'allenai/OLMo-1B-0724-hf'\n",
+    "  LLAMA = 'meta-llama/Llama-3.2-1B'\n",
+    "  TINY_LLAMA = 'TinyLlama/TinyLlama_v1.1'\n",
     "\n",
-    "\n",
-    "model_name = 'allenai/OLMo-1B-0724-hf'\n",
+    "model_name = 'meta-llama/Llama-3.2-1B'\n",
     "MODEL_NAME = ModelName(model_name)\n",
     "\n",
     "if MODEL_NAME is not ModelName.GPT2:\n",
@@ -150,19 +154,6 @@
     }
    },
    "source": [
-    "# @title Configure your device\n",
-    "#\n",
-    "# @markdown This notebook loads models from Hugging Face Transformers into the\n",
-    "# @markdown PyTorch deep learning runtime. PyTorch supports generation on CPU or\n",
-    "# @markdown GPU, but your chosen model will run best on the following hardware,\n",
-    "# @markdown some of which may require a\n",
-    "# @markdown [Colab Subscription](https://colab.research.google.com/signup).\n",
-    "# @markdown\n",
-    "# @markdown * Gemma v1.0 2B IT: Use a GPU with 16GB of memory, such as a T4.\n",
-    "# @markdown * Gemma v1.0 7B IT: Use a GPU with 32GB of memory, such as an A100.\n",
-    "# @markdown * GPT-2: Any runtime will work, though a High-RAM CPU or any GPU\n",
-    "# @markdown   will be faster.\n",
-    "\n",
     "DEVICE = (\n",
     "    torch.device('cuda:0') if torch.cuda.is_available() else torch.device('cpu')\n",
     ")\n",
@@ -193,15 +184,6 @@
     }
    },
    "source": [
-    "# @title Example watermarking config\n",
-    "#\n",
-    "# @markdown SynthID Text produces unique watermarks given a configuration, with\n",
-    "# @markdown the most important piece of a configuration being the `keys`: a\n",
-    "# @markdown sequence of unique integers.\n",
-    "# @markdown\n",
-    "# @markdown This reference implementation uses a fixed watermarking\n",
-    "# @markdown configuration, which will be displayed when you run this cell.\n",
-    "\n",
     "CONFIG = synthid_mixin.DEFAULT_WATERMARKING_CONFIG\n",
     "CONFIG"
    ],
@@ -230,8 +212,6 @@
     }
    },
    "source": [
-    "# @title Initialize the required constants, tokenizer, and logits processor\n",
-    "\n",
     "BATCH_SIZE = 8\n",
     "NUM_BATCHES = 320\n",
     "OUTPUTS_LEN = 1024\n",
@@ -285,20 +265,7 @@
     "        else transformers.GPT2LMHeadModel\n",
     "    )\n",
     "    model = model_cls.from_pretrained(model_name.value, device_map='auto')\n",
-    "  elif model_name == ModelName.OLMO:\n",
-    "      model_cls = (\n",
-    "          synthid_mixin.SynthIDOLMOForCausalLM\n",
-    "          if enable_watermarking\n",
-    "          else \n",
-    "          transformers.AutoModelForCausalLM\n",
-    "      )\n",
-    "      model = model_cls.from_pretrained(\n",
-    "          model_name.value,\n",
-    "          device_map='auto',\n",
-    "          torch_dtype=torch.bfloat16\n",
-    "      )\n",
-    "\n",
-    "  else:\n",
+    "  elif model_name == ModelName.GEMMA_2B or model_name == ModelName.GEMMA_7B:\n",
     "    model_cls = (\n",
     "        synthid_mixin.SynthIDGemmaForCausalLM\n",
     "        if enable_watermarking\n",
@@ -310,6 +277,18 @@
     "        device_map='auto',\n",
     "        torch_dtype=torch.bfloat16,\n",
     "    )\n",
+    "  else:\n",
+    "      model_cls = (\n",
+    "          synthid_mixin.SynthIDAutoModelForCausalLM\n",
+    "          if enable_watermarking\n",
+    "          else transformers.AutoModelForCausalLM\n",
+    "      )\n",
+    "      model = model_cls.from_pretrained(\n",
+    "          model_name.value,\n",
+    "          device_map='auto',\n",
+    "          torch_dtype=torch.bfloat16\n",
+    "      )    \n",
+    "\n",
     "\n",
     "  if str(model.device) != str(expected_device):\n",
     "    raise ValueError('Model device not as expected.')\n",
@@ -351,8 +330,6 @@
     }
    },
    "source": [
-    "# @title Generate watermarked output\n",
-    "\n",
     "gc.collect()\n",
     "torch.cuda.empty_cache()\n",
     "\n",
@@ -533,6 +510,53 @@
    "execution_count": 10
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()\n",
+    "\n",
+    "batch_size = 1\n",
+    "example_inputs = [\n",
+    "    'I enjoy walking with my cute dog',\n",
+    "    'I am from New York',\n",
+    "    'The test was not so very hard after all',\n",
+    "    \"I don't think they can score twice in so short a time\",\n",
+    "]\n",
+    "example_inputs = example_inputs * (int(batch_size / 4) + 1)\n",
+    "example_inputs = example_inputs[:batch_size]\n",
+    "\n",
+    "inputs = tokenizer(\n",
+    "    example_inputs,\n",
+    "    return_tensors='pt',\n",
+    "    padding=True,\n",
+    ").to(DEVICE)\n",
+    "print(\"Loading model\")\n",
+    "model = load_model(MODEL_NAME, expected_device=DEVICE, enable_watermarking=False)\n",
+    "torch.manual_seed(0)\n",
+    "print(\"Model loaded\")\n",
+    "outputs = model.generate(\n",
+    "    **inputs,\n",
+    "    do_sample=True,\n",
+    "    temperature=0.7,\n",
+    "    max_length=1024,\n",
+    "    top_k=40,\n",
+    "    pad_token_id=tokenizer.eos_token_id,\n",
+    ")\n",
+    "print(\"Generation finished\")\n",
+    "print('Output:\\n' + 100 * '-')\n",
+    "for i, output in enumerate(outputs):\n",
+    "  print(tokenizer.decode(output, skip_special_tokens=True))\n",
+    "  print(100 * '-')\n",
+    "\n",
+    "del inputs, outputs, model\n",
+    "gc.collect()\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "XCBDURjUc-6a"
@@ -555,8 +579,6 @@
    },
    "outputs": [],
    "source": [
-    "# @title Constants\n",
-    "\n",
     "NUM_NEGATIVES = 10000\n",
     "POS_BATCH_SIZE = 32\n",
     "NUM_POS_BATCHES = 313\n",
@@ -579,9 +601,6 @@
    },
    "outputs": [],
    "source": [
-    "# @title Generate model responses and compute g-values\n",
-    "\n",
-    "\n",
     "def generate_responses(example_inputs, enable_watermarking):\n",
     "  inputs = tokenizer(\n",
     "      example_inputs,\n",
@@ -589,7 +608,6 @@
     "      padding=True,\n",
     "  ).to(DEVICE)\n",
     "\n",
-    "  # @title Watermarked output preparation for detector training\n",
     "  gc.collect()\n",
     "  torch.cuda.empty_cache()\n",
     "\n",
@@ -669,8 +687,6 @@
    },
    "outputs": [],
    "source": [
-    "# @title Get Mean detector scores for the generated outputs.\n",
-    "\n",
     "# Watermarked responses tend to have higher Mean scores than unwatermarked\n",
     "# responses. To classify responses you can set a score threshold, but this will\n",
     "# depend on the distribution of scores for your use-case and your desired false\n",
