fix: synthid works for olmo now

--- a/notebooks/synthid_text_huggingface_integration.ipynb
+++ b/notebooks/synthid_text_huggingface_integration.ipynb
@@ -115,7 +115,7 @@
     "  GPT2 = 'gpt2'\n",
     "  GEMMA_2B = 'google/gemma-2b-it'\n",
     "  GEMMA_7B = 'google/gemma-7b-it'\n",
-    "  OLMO = 'allenai/OLMo-1B-0724-hf'\n",
+    "  OLMO = 'allenai/OLMo-1B'\n",
     "  LLAMA = 'meta-llama/Llama-3.2-1B'\n",
     "  TINY_LLAMA = 'TinyLlama/TinyLlama_v1.1'\n",
     "\n",
@@ -253,6 +253,8 @@
     }
    },
    "source": [
+    "from hf_olmo import OLMoForCausalLM\n",
+    "\n",
     "def load_model(\n",
     "    model_name: ModelName,\n",
     "    expected_device: torch.device,\n",
@@ -277,6 +279,18 @@
     "        device_map='auto',\n",
     "        torch_dtype=torch.bfloat16,\n",
     "    )\n",
+    "  elif model_name == ModelName.OLMO:\n",
+    "      model_cls = (\n",
+    "          synthid_mixin.SynthIDOlmoForCausalLM\n",
+    "          if enable_watermarking\n",
+    "          else OLMoForCausalLM\n",
+    "      )\n",
+    "      model = model_cls.from_pretrained(\n",
+    "          model_name.value,\n",
+    "          revision=\"step20000-tokens84B\",\n",
+    "          device_map='auto',\n",
+    "          torch_dtype=torch.bfloat16\n",
+    "      )\n",
     "  else:\n",
     "      model_cls = (\n",
     "          synthid_mixin.SynthIDAutoModelForCausalLM\n",
