feat: added Llama 3.2 1B model

--- a/notebooks/watermarking_example.ipynb
+++ b/notebooks/watermarking_example.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.103942Z",
-     "start_time": "2024-12-10T16:28:43.516511Z"
+     "end_time": "2024-12-11T18:18:51.995447Z",
+     "start_time": "2024-12-11T18:18:47.739615Z"
     }
    },
    "cell_type": "code",
@@ -47,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.116040Z",
-     "start_time": "2024-12-10T16:28:48.111433Z"
+     "end_time": "2024-12-11T18:18:52.002437Z",
+     "start_time": "2024-12-11T18:18:51.999463Z"
     }
    },
    "cell_type": "code",
@@ -64,8 +64,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.310630Z",
-     "start_time": "2024-12-10T16:28:48.304188Z"
+     "end_time": "2024-12-11T18:18:52.133003Z",
+     "start_time": "2024-12-11T18:18:52.126146Z"
     }
    },
    "cell_type": "code",
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.332426Z",
-     "start_time": "2024-12-10T16:28:48.327272Z"
+     "end_time": "2024-12-11T18:18:52.153528Z",
+     "start_time": "2024-12-11T18:18:52.148718Z"
     }
    },
    "cell_type": "code",
@@ -122,8 +122,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.373089Z",
-     "start_time": "2024-12-10T16:28:48.368045Z"
+     "end_time": "2024-12-11T18:27:34.152903Z",
+     "start_time": "2024-12-11T18:27:34.144708Z"
     }
    },
    "cell_type": "code",
@@ -163,6 +163,17 @@
     "            device_map='auto',\n",
     "            torch_dtype=torch.bfloat16\n",
     "        )\n",
+    "    elif model_name == \"meta-llama/Llama-3.2-1B\":\n",
+    "        model_cls = (\n",
+    "            synthid_mixin.SynthIDLlamaForCausalLM\n",
+    "            if enable_watermarking\n",
+    "            else transformers.LlamaForCausalLM\n",
+    "        )\n",
+    "        model = model_cls.from_pretrained(\n",
+    "            model_name,\n",
+    "            device_map=\"auto\",\n",
+    "            torch_dtype=torch.bfloat16,\n",
+    "        )\n",
     "    else:\n",
     "        model_cls = (\n",
     "            synthid_mixin.SynthIDAutoModelForCausalLM\n",
@@ -182,13 +193,13 @@
    ],
    "id": "e01be1283ba2e03f",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.391688Z",
-     "start_time": "2024-12-10T16:28:48.386998Z"
+     "end_time": "2024-12-11T18:27:34.726791Z",
+     "start_time": "2024-12-11T18:27:34.712137Z"
     }
    },
    "cell_type": "code",
@@ -243,13 +254,13 @@
    ],
    "id": "53e8e92357a8d4d",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:48.399154Z",
-     "start_time": "2024-12-10T16:28:48.396165Z"
+     "end_time": "2024-12-11T18:27:36.491262Z",
+     "start_time": "2024-12-11T18:27:36.488572Z"
     }
    },
    "cell_type": "code",
@@ -259,7 +270,7 @@
    ],
    "id": "29aa25b2dd4a0e51",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -270,8 +281,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:28:58.705004Z",
-     "start_time": "2024-12-10T16:28:48.406730Z"
+     "end_time": "2024-12-11T18:18:59.141940Z",
+     "start_time": "2024-12-11T18:18:52.227972Z"
     }
    },
    "cell_type": "code",
@@ -311,8 +322,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:29:40.430783Z",
-     "start_time": "2024-12-10T16:28:58.730566Z"
+     "end_time": "2024-12-11T18:19:41.981873Z",
+     "start_time": "2024-12-11T18:18:59.259439Z"
     }
    },
    "cell_type": "code",
@@ -392,8 +403,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:30:36.140714Z",
-     "start_time": "2024-12-10T16:29:40.527799Z"
+     "end_time": "2024-12-11T18:22:03.456991Z",
+     "start_time": "2024-12-11T18:19:46.740942Z"
     }
    },
    "cell_type": "code",
@@ -425,11 +436,18 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "30844a341e6a4e8481ad287ad45b3ebc"
+       "model_id": "da80875a5cc94d1ca4708defd33f58c8"
       }
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some parameters are on the meta device because they were offloaded to the disk and cpu.\n"
+     ]
     },
     {
      "name": "stdout",
@@ -453,8 +471,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:31:35.125364Z",
-     "start_time": "2024-12-10T16:30:36.150514Z"
+     "end_time": "2024-12-11T18:23:00.253206Z",
+     "start_time": "2024-12-11T18:22:03.466998Z"
     }
    },
    "cell_type": "code",
@@ -476,7 +494,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "c2e58b273b074da9a3f4638cb006ad29"
+       "model_id": "debc03a00542460999412ab8563e58ec"
       }
      },
      "metadata": {},
@@ -511,8 +529,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:32:35.348500Z",
-     "start_time": "2024-12-10T16:31:35.135456Z"
+     "end_time": "2024-12-11T18:24:06.296322Z",
+     "start_time": "2024-12-11T18:23:00.272208Z"
     }
    },
    "cell_type": "code",
@@ -539,7 +557,7 @@
      "text": [
       "I enjoy walking with my cute dog in the park, but also love the peacefulness and closeness of my family. I have a big heart, because I have been an foster dog for a long time and I need a home where I can fully relax and not be stressed. I'm looking for someone who is caring, loving, and honest, and I would be very happy to provide it. I can adapt to a variety of situations, but I like to have fun and see things from a different perspective. I'm a very kind person, and I want to be able to bring joy to others. I can't wait to meet you!\n",
       "The ideal match for this dog will be a family with dogs of similar sizes and temperament. There will be a full medical exam and a physical exam. If you think this is the dog for you, please contact us. We will be happy to answer any questions you might have.\n",
-      "This dog is a bit on the small side, though I have a large heart. I am very gentle and kind, and I love to spend time with my family, especially my dog, and I need a dog that can be my constant companion. I am a very loving dog who is always happy to be with me and is happy to spend time with me. I come from a large family, so I have a lot of love and affection for my family. I love to walk and explore and have been told I am good for business. I am an easy-going dog, and I am a good dog-lover, so I would be happy to meet you with my dog!\n"
+      "This dog is a bit on the small side, though I have a large heart. I am very gentle and kind, and I love to spend time with my family, especially my dog, and I need a dog that can be my constant companion. I am a very loving dog who is always happy to be with me and is happy to spend time with me. I come from a large family, so I have a lot of love and affection for my family. I love to walk and explore and have been told I am good for business. I am an easy-going dog, and I am a good dog-lover, so I would be happy to be your neighbor.  I can't wait to meet you.\n"
      ]
     }
    ],
@@ -548,8 +566,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:33:02.678961Z",
-     "start_time": "2024-12-10T16:32:35.444096Z"
+     "end_time": "2024-12-11T18:25:55.633949Z",
+     "start_time": "2024-12-11T18:24:06.383187Z"
     }
    },
    "cell_type": "code",
@@ -574,34 +592,130 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I enjoy walking with my cute dog, but sometimes the dog will be on the leash and the dog will be on the leash. It's very frustrating that after a few minutes of walking with my dog, that he will get on the leash and my dog won't.\n",
-      "I have never been to the vet, but I'm wondering if my dog is allergic to something or if I should go to the vet.\n",
-      "\n",
-      "Does it come off easily?\n",
-      "It does come off easily.\n",
-      "Does it hurt when it comes on?\n",
-      "No, it shouldn't hurt when it comes on.\n",
-      "Does it come off with soap?\n",
-      "No. It comes off with soap.\n",
-      "It comes off with dog shampoo?\n",
-      "No. It comes off with dog shampoo.\n"
+      "I enjoy walking with my cute dog, but sometimes the dog will let me down by not paying attention to her commands.\n",
+      "I’m hoping to find some sort of way to train her to not let me down by not paying attention to her commands.\n",
+      "A lot of my training takes place on the treadmill.\n",
+      "It’s the one place where I can go to get my mind off of the fact that my dog isn’t paying attention to me.\n",
+      "It’s also the only place where I can train my dog to not be scared of me.\n",
+      "I can’t help it, I’m still terrified of her.\n",
+      "I hope someone can help me, I’m desperate to get my dog to stop letting me down by not paying attention to her commands.\n",
+      "My dog doesn’t mind me, but if I’m not paying attention to her, I can’t train her to be afraid of me.\n",
+      "I hope someone can help me with this.\n",
+      "I’ve tried everything I can think of, but to no avail.\n",
+      "I have never been able to train my dog to not let me down by not paying attention to her commands.\n",
+      "I’ve also tried to train her to not let me down by not paying attention to her commands, but I still can’t get her to not let me down by not paying attention to her commands.\n",
+      "I’m hoping someone can help me with this.\n",
+      "I’m wondering if there is a way that I can train my dog not to let me down by not paying attention to her commands.\n",
+      "I’m hoping someone can help me with this.\n",
+      "I have a dog who doesn’t like being outside in the cold, and I’m wondering if there is a way to train my dog not to be afraid of the cold, and to not let her down by not paying attention to me.\n",
+      "I’m hoping someone can help me with this.\n",
+      "I have a dog who doesn’t like being outside.\n",
+      "I have a dog who doesn’t like being outside in the cold.\n",
+      "I’m hoping someone can help me with this.\n",
+      "I’m wondering if anyone can help me train my dog not to be afraid of the cold, and to not let her down by not paying attention to me.\n",
+      "I’m wondering if anyone has any ideas or suggestions for me?\n",
+      "I’m wondering if anyone has any suggestions for me.\n",
+      "I’m wondering if anyone has any ideas or tips for me.\n",
+      "I’m wondering if anyone has any ideas or tips for me.\n",
+      "I’m wondering if anyone has any ideas or tips for me.\n",
+      "I’m wondering if anyone has any ideas or tips for me.\n",
+      "I’m wondering if anyone has any ideas or tips for me.\n"
      ]
     }
    ],
    "execution_count": 13
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Llama 3.2 1B",
+   "id": "1b99f2a1b79ddc6b"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-10T16:33:02.760251Z",
-     "start_time": "2024-12-10T16:33:02.756542Z"
+     "end_time": "2024-12-11T18:27:55.065602Z",
+     "start_time": "2024-12-11T18:27:40.807757Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "f80afeb0a51342d6",
+   "source": [
+    "generate_text(\n",
+    "    model_name='meta-llama/Llama-3.2-1B',\n",
+    "    input_text=input_text,\n",
+    "    device=DEVICE,\n",
+    "    enable_watermarking=False\n",
+    ")"
+   ],
+   "id": "fda9a44690c83bce",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I enjoy walking with my cute dog on the beach and exploring the sea. I have been a keen photographer for many years and love capturing the beauty and tranquillity of the North West coastline. I have a special interest in capturing the special moments of family life and enjoy photographing weddings and portraits of children.\n"
+     ]
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-11T18:30:38.373836Z",
+     "start_time": "2024-12-11T18:27:55.069611Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "generate_text(\n",
+    "    model_name='meta-llama/Llama-3.2-1B',\n",
+    "    input_text=input_text,\n",
+    "    device=DEVICE,\n",
+    "    enable_watermarking=True\n",
+    ")"
+   ],
+   "id": "99d248d46b7dae4e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I enjoy walking with my cute dog. I have two cats. I love to read. I like to sew. I like to cook. I like to bake. I like to travel. I like to dance. I like to listen to music. I like to work. I like to party. I like to swim. I like to watch TV. I like to shop. I like to hang out. I like to play. I like to read books.\n",
+      "I enjoy walking with my cute dog. I have two cats. I love to read. I like to sew. I like to cook. I like to bake. I like to travel. I like to dance. I like to listen to music. I like to work. I like to party. I like to swim. I like to watch TV. I like to shop. I like to hang out. I like to play. I like to read books.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with my friends.\n",
+      "I like to play with my dog. I like to play with my cat. I like to play with my son. I like to play with my daughter. I like to play with\n"
+     ]
+    }
+   ],
+   "execution_count": 19
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "9241a5143c178b6a"
   }
  ],
  "metadata": {
