feat: update README and notebooks

--- a/notebooks/watermarking_example.ipynb
+++ b/notebooks/watermarking_example.ipynb
@@ -12,6 +12,7 @@
     "- GPT2\n",
     "- Gemma 2B\n",
     "- OLMo 1B\n",
+    "- Llama 3.2 1B\n",
     "\n",
     "For each model, we will generate text with and without watermarking, and compare the results."
    ],
@@ -216,13 +217,10 @@
     "    tokenizer = transformers.AutoTokenizer.from_pretrained(model_name)\n",
     "    tokenizer.pad_token = tokenizer.eos_token\n",
     "    tokenizer.padding_side = \"left\"\n",
-    "    \n",
-    "    TEMPERATURE = 0.5\n",
-    "    TOP_K = 40  \n",
     "\n",
-    "    logits_processor = logits_processing.SynthIDLogitsProcessor(\n",
-    "        **CONFIG, top_k=TOP_K, temperature=TEMPERATURE\n",
-    "    )\n",
+    "    #logits_processor = logits_processing.SynthIDLogitsProcessor(\n",
+    "    #    **CONFIG, top_k=40, temperature=0.7\n",
+    "    #)\n",
     "    \n",
     "    inputs = tokenizer(\n",
     "        input_text,\n",
